force-app/main/default/objects/Usability_Review__c/Usability_Review__c.object-meta.xml
<CustomObject>
    <description>A review is a record of a staff person&apos;s assessment of a member result. After reviewing a member result, consider if the results might be usable for social media, donor cultivation, program promotion,sponsor feedback, etc.</description>
    <label>Usability Review</label>
    <nameField>
        <displayFormat>UR-{0000}</displayFormat>
        <label>Usability Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usability Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>