force-app/main/default/objects/Usability_Review__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Member_Results__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account linked to Member Result record</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>