force-app/main/default/objects/Usability_Review__c/fields/Idea_for_use__c.field-meta.xml
<CustomField>
    <fullName>Idea_for_use__c</fullName>
    <inlineHelpText>Suggest a specific audience, channel or purpose where this content could be usable.
Ex: newsletter, social media, forum post, member portal, donor campaign, website.
Audiences: donors, other program participants, new recruits, Huggies, legislators, etc</inlineHelpText>
    <label>Idea for Use</label>
    <length>155</length>
    <type>Text</type>
</CustomField>