force-app/main/default/objects/Usability_Review__c/fields/Member_Results__c.field-meta.xml
<CustomField>
    <fullName>Member_Results__c</fullName>
    <label>Member Results</label>
    <referenceTo>Member_Result__c</referenceTo>
    <relationshipLabel>Usability Review</relationshipLabel>
    <relationshipName>Usability_Review</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>