force-app/main/default/objects/Usability_Review__c/fields/NDBN_Program__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Program__c</fullName>
    <formula>Member_Results__r.Program_Offering__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDBN Program</label>
    <type>Text</type>
</CustomField>