force-app/main/default/objects/Usability_Review__c/fields/Program_Relevance__c.field-meta.xml
<CustomField>
    <fullName>Program_Relevance__c</fullName>
    <inlineHelpText>Is the statement relevant to the program referenced? Select yes if the statement directly describes (or illustrates) how participation in THIS program has had a positive impact on the organization&apos;s program or mission.</inlineHelpText>
    <label>Program Relevance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
                <isActive>false</isActive>
                <label>Average</label>
            </value>
            <value>
                <fullName>Below_Average</fullName>
                <isActive>false</isActive>
                <label>Below Average</label>
            </value>
            <value>
                <fullName>Poor</fullName>
                <isActive>false</isActive>
                <label>Poor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>