force-app/main/default/objects/Usability_Review__c/fields/Relatable_Content__c.field-meta.xml
<CustomField>
    <fullName>Relatable_Content__c</fullName>
    <inlineHelpText>Are there details about the speaker, group, or program that make it relatable to a target reader? (Would it make donors act? Would someone share or repost it? Does it demonstrate the value of membership to potential new diaper programs?)</inlineHelpText>
    <label>Relatable Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>