force-app/main/default/objects/Usability_Review__c/fields/Strong_Support__c.field-meta.xml
<CustomField>
    <fullName>Strong_Support__c</fullName>
    <inlineHelpText>Does this Member Result QUANTIFY achievement (by including numbers, percents, values or other measurements of success)?
OR does it QUALIFY achievement (by describing or illustrating a process, situation, desired program outcome?</inlineHelpText>
    <label>Strong Support</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>Average</label>
            </value>
            <value>
                <fullName>Below_Average</fullName>
                <isActive>false</isActive>
                <label>Below Average</label>
            </value>
            <value>
                <fullName>Poor</fullName>
                <isActive>false</isActive>
                <label>Poor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>