force-app/main/default/objects/Usability_Review__c/fields/Usable_content__c.field-meta.xml
<CustomField>
    <fullName>Usable_content__c</fullName>
    <inlineHelpText>Do you think this result might be good for sharing with one of NBDN&apos;s target audiences?</inlineHelpText>
    <label>Usable Content</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>